<?xml version="1.0"?>
<package format="2">
  <name>minimum_snap_global_planner</name>
  <version>1.0.0</version>
  <description>
    Unified ROS package providing the Minimum Snap global planner plugin, waypoint RViz tool,
    and supporting A* / trajectory generation libraries.
  </description>

  <maintainer email="zhangzhimeng@turingvideo.net">Zhang Zhimeng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_core</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>global_planner</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <nav_core plugin="${prefix}/plugins/minimum_snap_planner_plugin.xml" />
    <rviz plugin="${prefix}/rviz_tools/waypoint_tool/plugin_description.xml"/>
  </export>
</package>

