<?xml version="1.0"?>
<package format="2">
  <name>minimum_snap_planner</name>
  <version>1.0.0</version>
  <description>A* + Minimum Snap global planner plugin for move_base with waypoint support</description>

  <maintainer email="zhangzhimeng@turingvideo.net">meng</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_core</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>global_planner</depend>
  <depend>trajectory_generator</depend>

  <export>
    <nav_core plugin="${prefix}/minimum_snap_planner_plugin.xml" />
  </export>
</package>

